refactor(service): simplify getAllOffers using stream and method reference